# sida-middleware

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.cmake/: essentials.cmake
core/: README.md
core/context/: .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .flows.json.backup  .flows_cred.json.backup  README.md  flows.json  package.json
core/delivery/: .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .flows.json.backup  .flows_cred.json.backup  README.md  flows.json  package.json
core/delivery/log/: docker_stats.csv  network_latency.csv  process_time.csv
core/ingestion/: .config.modules.json  .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .flows.json.backup  .flows_cred.json.backup  README.md  flows.json  package.json
infra/: Dockerfile  README.md  docker-compose.yml
infra/images/: sida-cpp-base.Dockerfile
ingestion/agents/: CMakeLists.txt
ingestion/agents/dummy/: CMakeLists.txt  Dockerfile
libs/: CMakeLists.txt
libs/network/: CMakeLists.txt  zmq_datagram.cpp  zmq_datagram.h  zmq_poller.cpp  zmq_poller.h  zmq_publisher.cpp  zmq_publisher.h  zmq_subscriber.cpp  zmq_subscriber.h
schemas/: README.md
sida-core/: Dockerfile  go.mod  go.sum
sida-core/cmd/server/: main.go
sida-core/frontend/: index.html  package.json
sida-core/frontend/src/: App.jsx  index.css
sida-ontology-builder/: Dockerfile  go.mod  go.sum
(+26 files in other folders)
